fix : 제네릭에서 Obejct로 변경